<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingBottom="16dp">

    <Spinner
        android:id="@+id/spinnerSummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:prompt="@string/select_summary" />

    <LinearLayout
        android:id="@+id/summaryContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="8dp"
        android:visibility="gone">

        <Button
            android:id="@+id/btnListenSummary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/listen_summary" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:fillViewport="true">

            <TextView
                android:id="@+id/tvSummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">

        <Button
            android:id="@+id/btnFromDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/navy_blue"
            android:text="@string/from_date"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/btnToDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/navy_blue"
            android:text="@string/to_date"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/btnClearFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/navy_blue"
            android:text="@string/clear_filter"
            android:textColor="@android:color/white"/>
    </LinearLayout>

    <ListView
        android:id="@+id/listReports"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>
